# NaiveDB

./: .gitignore  Cargo.toml  Dockerfile  README.md  create.sql  rust-toolchain
.github/workflows/: build.yml  cov.yml  rust.yml
src/: db.rs  main.rs  sql.lalrpop
src/catalog/: catalog_manager.rs  mod.rs
src/datum/: mod.rs  types.rs
src/execution/: catalog.rs  mod.rs
src/execution/executor/: add_index.rs  agg.rs  alter.rs  create_database.rs  create_table.rs  delete.rs  desc.rs  drop.rs  drop_table.rs  filter.rs  index_scan.rs  insert.rs  load_from_file.rs  mod.rs  nested_loop_join.rs  project.rs  seq_scan.rs  show_databases.rs  update.rs  use_database.rs  values.rs
src/expr/: binary.rs  column_ref.rs  constant.rs  like.rs  mod.rs
src/index/: internal.rs  key.rs  leaf.rs  mod.rs  node.rs  utils.rs
src/parser/: ast.rs  mod.rs
src/planner/: add_index.rs  agg.rs  alter.rs  create_database.rs  create_table.rs  delete.rs  desc.rs  drop.rs  drop_table.rs  filter.rs  insert.rs  load_from_file.rs  mod.rs  nested_loop_join.rs  project.rs  scan.rs  select.rs  seq_scan.rs  update.rs  use_database.rs  values.rs
src/storage/: buffer.rs  clock.rs  disk.rs  mod.rs  page.rs  slotted.rs
src/storage/page/: db.rs  mod.rs
src/table/: mod.rs  rid.rs  schema.rs  slice.rs  types.rs
