[package]
name = "naive_db"
version = "0.1.0"
edition = "2018"

[build-dependencies] 
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
log = "0.4.14"
thiserror = "1.0.30"
env_logger = "0.6.1"
rand = "0.8.4"
itertools = "0.8.2"
pad = "0.1.6"
prettytable-rs = "0.8"
rustyline = "9.0.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
